[package]
name = "unbinder"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", optional = true, features = ["console"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"

[dependencies.wasm-bindgen]
version = "0.2.100"
features = ["serde-serialize"]

[features]
default = ["console_error_panic_hook", "console_log"]
console_log = ["web-sys"]

dev = ["console_error_panic_hook", "console_log"]

[profile.release]
# Optimize for size in release builds
opt-level = "s"
lto = true
debug = false
panic = "abort"

# Enable aggressive optimizations for WASM
[profile.release.package."*"]
opt-level = "s"
