[package]
name = "unbinder"
version = "0.1.7"
edition = "2021"
authors = ["jakobloch <38576440+jakobloch@users.noreply.github.com>"]
description = "A high-performance JSON Schema dereferencer for resolving $ref pointers"
documentation = "https://docs.rs/unbinder"
homepage = "https://github.com/jakobloch/unbinder"
repository = "https://github.com/jakobloch/unbinder"
license = "MIT"
readme = "README.md"
keywords = ["json-schema", "dereference", "ref", "wasm", "no-std"]
categories = ["web-programming", "wasm", "no-std", "parser-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[package.metadata.wasm-pack]
name = "unbinder"

# ── core ──────────────────────────────────────────────
[dependencies]
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cfg-if = "1.0.1"

# ── wasm glue (conditional) ──────────────────────────────
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Performance",
] }
wasm-bindgen = { version = "0.2", optional = true, features = [
    "serde-serialize",
] }
wasm-bindgen-rayon = { version = "1.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = { version = "0.4", optional = true }

# ── features ──────────────────────────────────────────
[features]
default = ["std"]
std = []
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
]
wee_alloc = ["dep:wee_alloc"]
console_log = ["wasm", "dep:web-sys"] # Fixed: use dep:web-sys
console_error_panic_hook = ["dep:console_error_panic_hook"]
text-interface = ["wasm"]
parallel = [
    "std",
    "dep:wasm-bindgen-rayon",
    "wasm",
] # Fixed: use dep:wasm-bindgen-rayon
dev = [
    "dep:console_error_panic_hook",
    "console_log",
] # Fixed: use dep:console_error_panic_hook

# ── release profile ───────────────────────────────────
[profile.release]
opt-level = "s"
lto = true
panic = "abort"
